only consider a wolf hostile when angry

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.justeli.coins</groupId>
     <artifactId>Coins</artifactId>
-    <version>1.12.1</version>
+    <version>b1.12.2</version>
     <name>Coins</name>
     <url>https://www.spigotmc.org/resources/coins.33382/</url>
 
