economy hook renaming

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,11 +3,11 @@
 # # # # # # # # # # # # # # # # # # # # # # # #
 # This config was generated for Coins version ${project.version}.
 
-# This project is completely being developed in the spare time of the developer.
+# This project is entirely being developed in the spare time of the developer.
 #  If you like the plugin, consider donating at https://paypal.me/justeli
 
 # If you need support, join the Discord support server: https://discord.gg/fVwCETj
-#  Make sure you read the FAQ (#coins-faq) first, before asking for support!
+#  Make sure to read the FAQ (#coins-faq) first, before asking for support!
 
 #  #  #  #  #  #  #  #
 #  Misc & Language   #
