--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,9 @@ charset = utf-8
 insert_final_newline = true
 max_line_length = off
 
+[*.yml]
+indent_size = 2
+
 # IntelliJ
 ij_visual_guides = 160
 
