add bstats as library in plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,6 +6,8 @@ description: '${project.description}'
 api-version: '1.17'
 authors: [JustEli]
 softdepend: [Vault, Treasury, WorldGuard, mcMMO, MythicMobs]
+libraries:
+  - org.bstats:bstats-bukkit:3.0.0
 commands:
   coins:
     description: 'Command for showing all available commands from Coins. Also used for various admin tools.'
